Better mobile styling + fix for hero remove icon
Mobile hero icon is better placed to fix overlap issues.
Moved hero remove icon to top of container, and made it larger
(including touch detection).
Adjusted size of hero containers.
More semantic and responsive HTML.

--- a/app/css/hero-summary.css
+++ b/app/css/hero-summary.css
@@ -22,11 +22,9 @@ a.panel {
     position: relative;
     display: block;
     color: inherit;
-    height: 360px;
-    /* max-width: 200px; */
+    height: 330px;
     border: none;
     overflow: hidden;
-    padding-bottom: 60px;
 }
 
 a.panel:hover, a.panel:focus, a.panel:active {
@@ -50,13 +48,14 @@ a.panel:hover .summary-head, a.panel:focus .summary-head, a.panel:active .summar
     left: 0;
     background-color: grey;
     transform-origin: 50% 0%;
-    transform: scaleY(0.1);
+    transform: scaleY(0.2);
     z-index: 5;
     transition: transform 0.5s;
 }
 
 .summary-head {
-    padding: 30px 10px 10px 10px;
+    height: 60px;
+    padding: 16px 6%;
     text-align: center;
     position: relative;
     transition: color 0.5s ease;
@@ -69,49 +68,43 @@ a.panel:hover .summary-head, a.panel:focus .summary-head, a.panel:active .summar
 
 .hero-remove {
     float: right;
-    font-size: 1.2em;
+    font-size: 20px;
+    background-color: rgba(255, 255, 255, .5);
     color: #f7615c;
     transition: all 0.1s ease;
-    z-index: 10;
+    z-index: 20;
 }
 
 .hero-remove::before {
     position: absolute;
-    top: 0;
-    right: 0;
+    padding: 16px;
+    background-image: radial-gradient(#F0F0F0 9px, transparent 1px);
+    border-radius: 20px;
+    top: -24px;
+    right: -24px;
 }
 
 .hero-remove:hover {
-    font-size: 1.35em;
+    font-size: 22px;
+    cursor: pointer;
     color: red;
 }
 
 .hero-name {
-    margin-top: 10px;
-    z-index: 10;
     position: relative;
-}
-
-.hero-name.mobile {
-    margin-left: 60px;
+    text-align: right;
+    margin: 0px;
+    line-height: 40px;
+    font-size: 18px;
+    z-index: 10;
 }
 
 .hero-icon {
-    font-size: 120px;
-    text-align: center;
-    line-height: 1;
-    position: relative;
-    z-index: 9;
-}
-
-.hero-icon.mobile {
     position: absolute;
-    top: calc(50% - 20px);
-    left: 12px;
-    font-size: 56px;
+    top: 16px;
+    left: 6%;
+    font-size: 40px;
     z-index: 9;
-    /* padding-right: 10px;
-    border-right: 2px solid rgba(255, 255, 255, .5); */
 }
 
 .hero-status {
@@ -266,12 +259,35 @@ a.panel:hover .summary-head, a.panel:focus .summary-head, a.panel:active .summar
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
 
-    .hero-name {
-        margin-top: 20px;
-    }
-
     a.panel {
         height: 540px;
+    }
+
+    .summary-head {
+        height: 220px;
+        padding: 30px 20px 0px 20px;
+        position: relative;
+        transition: color 0.5s ease;
+    }
+
+    .hero-name {
+        margin-top: 20px;
+        margin-left: 0px;
+        text-align: center;
+        font-size: 30px;
+        line-height: 1;
+    }
+
+    .hero-icon {
+        font-size: 120px;
+        text-align: center;
+        position: relative;
+        top: initial;
+        left: initial;
+    }
+
+    .overlay {
+        transform: scaleY(0.1);
     }
 
     .stat-bar {
